[package]
name = "crabe-de-la-crabe"
version = "0.1.0"
authors = ["Christian Ivicevic <mail@christian-ivicevic.com>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
regex = "1.7.1"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils", "cache"] }
tokio = { version = "1.24.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
